# orthanq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  environment.yml  pixi.toml
.github/workflows/: environment.yaml  release-please.yml  rust.yml
resources/: regions.bed
resources/clade_to_lineages/: cladeToLineages.tsv  readme.txt
src/: candidate_variants.rs  cli.rs  lib.rs  model.rs  preprocess_hla.rs
src/calling/: haplotypes.rs  mod.rs
src/calling/haplotypes/: haplotypes.rs  hla.rs  mod.rs  virus.rs
src/candidates/: hla.rs  mod.rs  virus.rs
src/candidates/virus/: generic.rs  mod.rs  sarscov2.rs
src/preprocess/: hla.rs  virus.rs
templates/: arrow_plot.json  datavzrd_config.yaml  densities.json  example_orthanq_output.json  final_prediction.json  fractions_barchart.json  fractions_barchart_forfigure.json  log.txt  lp_prediction.json  orthanq_output.json  prediction.json
test_files/bigmhc_alleles/: read-me.txt  valid_hla_alleles.txt
test_hiv/: candidates.bcf  viruses_alignment_sorted.bam
test_hiv.vcf/: candidates.vcf  viruses_alignment_sorted.bam
test_virus/: datavzrd_config_filled.yaml  predictions.csv  viral_solutions.json
tests/: DQA1.vcf  Sample_HLA00601-0.5_HLA21879-0.5.bcf  Sample_HLA00601-0.5_HLA21879-0.5_DQA1_abundance.h5  Sample_HLA00601-0.5_HLA21879-0.5_DQA1_abundance.tsv  Sample_HLA00601-0.5_HLA21879-0.5_obs.bcf  Sample_HLA00601-1.0.bcf  Sample_HLA00601-1.0_DQA1_abundance.h5  Sample_HLA00601-1.0_DQA1_abundance.tsv  Sample_HLA00601-1.0_obs.bcf  hla-allele-variants_v3.vcf.gz.tbi  hla-allele-variants_v4.vcf.gz.tbi  lib.rs
