[package]
name = "orthanq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-types = { version = "0.12", features = ["serde"] }
rust-htslib = "0.38"
log = "0.4"
GSL = "6.0"
itertools = "0.10"
itertools-num = "0.1"
ordered-float = { version = "1", features = ["serde"] }
csv = "1"
cached = "0.26"
structopt = "0.3"
derive_builder = "0.10.2"
yaml-rust = ">=0.4.1,<0.5"
derive-new = "0.5"
bv = "0.11"
fern = "0.6"
statrs = "0.15"
anyhow = "1.0"
derefable = "0.1"
hdf5 = "0.8"
varlociraptor = "4.11.3"
bio = { git = "https://github.com/huzuner/rust-bio", rev = "2dd2dce"}
approx = "0.5.1"
derive_deref = "1.1.1"