[package]
name = "orthanq"
version = "1.10.0"
edition = "2018"
description = "A tool to quantify haplotypes in an uncertainty-aware manner"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-types = "0.13.0"
rust-htslib = "0.45.0"
log = "0.4"
GSL = "6.0"
itertools = "0.10"
itertools-num = "0.1"
ordered-float = { version = "1", features = ["serde"] }
csv = "1"
cached = "0.26"
structopt = "0.3"
derive_builder = "0.10.2"
yaml-rust = ">=0.4.1,<0.5"
derive-new = "0.5"
bv = "0.11"
fern = "0.6"
statrs = "0.15"
anyhow = "1.0"
derefable = "0.1"
bio = "0.41.0"
derive_deref = "1.1.1"
assert_approx_eq = "1.1.0"
ndarray = "0.15.4"
polars = "0.22.8"
smartcore = "0.2.1"
linfa = "0.6.0"
linfa-clustering = "0.6.0"
plotters = "0.3.3"
rand_xoshiro = "0.6.0"
serde_json = "1.0.85"
serde = "1.0.145"
good_lp = { version = "1.4.0", features = ["coin_cbc"], default-features = false }
quick-xml = "0.26.0"
tempfile = "3"
futures = "0.3" # for our async / await blocks
seq_io = "0.3.2"
petgraph = "0.6.4"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.develop]
codegen-units = 128
inherits = "release"
lto = false
